<resources>
    <string name="app_name">Offerian</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_join_offerian_now">Welcome! Join Offerian Now!!</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">SUBMIT</string>

    <string name="country_prompt">Choose a country</string>
    <string name="gender_prompt">Choose a gender</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>

    <string-array name="country_arrays">
        <item>Select Area</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

</resources>
