<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00bcd4">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/_25sdp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFullNameLogIn"
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMobileLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_button_bg"
                android:gravity="left"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="@dimen/_10sdp"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordLogin"
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="@dimen/_15sdp"
                android:textColor="#000"
                android:inputType="textPassword"
                android:background="@drawable/signup_button_bg"
                android:hint="@string/password"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                />
        </android.support.design.widget.TextInputLayout>





        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:textColor="#000"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/signup_button_bg"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_25sdp"

            />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            />

    </LinearLayout>

</LinearLayout>