<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_5sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@mipmap/ic_back"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_toRightOf="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="#fff"
            android:textSize="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/_25sdp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFullNameLogIn"
            android:layout_width="match_parent"
            android:textColorHint="@color/appcolor"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMobileLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/mobile_number"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordLogin"
            android:layout_width="match_parent"
            android:textColorHint="@color/appcolor"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/_15sdp"
            android:textColor="#000"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            />

        </android.support.design.widget.TextInputLayout>





        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:textColor="#000"
            android:padding="@dimen/_10sdp"
            android:background="@color/appcolor"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_25sdp"

            />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/appcolor"
            />

    </LinearLayout>

</LinearLayout>